--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "native-base": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.36.0",
     "react-native-safe-area-context": "^3.4.1",
     "react-native-svg": "^12.4.4",
     "react-native-web": "^0.16.5",
